Fix ETO layout alignment issues (#4142)
* fix scss lint issue

* fix alignment when there's no social channels

* clear fix rich field

* Update health-check-sha.json

* cleanup

* use bootstrap clearfix

--- a/packages/design-system/src/components/tables/Table.module.scss
+++ b/packages/design-system/src/components/tables/Table.module.scss
@@ -24,7 +24,7 @@
     border-bottom: 1px solid $neu-light-blue-grey-two;
 
     &:last-of-type {
-      border: none;
+      border: 0;
     }
   }
 
